Backend atualizado
