# backend/main.go
@@ -1,14 +1,14 @@
 package main
 
 import (
-//	"flag"
+	"flag"
 	"fmt"
 	"log"
 	"net/http"
-//	"time"
+	"time"
 	"uati-api/alerts"
 	"uati-api/clients"
-//	"uati-api/database"
+	"uati-api/database"
 	"uati-api/middlewares"
 	"uati-api/specials"
 	"uati-api/users"
@@ -16,64 +16,59 @@ import (
 	"github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
 
-//	"github.com/subosito/gotenv"
+	"github.com/subosito/gotenv"
 )
 
 //Db is the connection to the db
-//var db = database.GetDB()
+var db = database.GetDB()
 
-//func init() {
-//	gotenv.Load()
-//}
+func init() {
+	gotenv.Load()
+}
 
 func main() {
+	ticker := time.NewTicker(12 * time.Hour)
 
-//	ticker := time.NewTicker(12 * time.Hour)
-
-//	setdb := flag.Bool("setdb", true, "download csv and setup db on startup")
-//	flag.Parse()
-//	if *setdb {
-	//	database.SetDB()
+	setdb := flag.Bool("setdb", false, "download csv and setup db on startup")
+	flag.Parse()
+	if *setdb {
+		database.SetDB()
 		go func() {
-	//		// database.GetPublicEmps()
-	//		database.SetSpecials()
+			// database.GetPublicEmps()
+			database.SetSpecials()
 			alerts.SendAlerts()
 		}()
 		fmt.Println("DB set, starting server")
-	//}
-//
-//	go func() {
-//		for _ = range ticker.C {
-//			fmt.Println("Starting employees service")
-//			database.GetPublicEmps()
-//			database.SetSpecials()
-//			alerts.SendAlerts()
-//		}
-//
-//	}()
+	}
+
+	go func() {
+		for _ = range ticker.C {
+			fmt.Println("Starting employees service")
+			database.GetPublicEmps()
+			database.SetSpecials()
+			alerts.SendAlerts()
+		}
+
+	}()
 
 	router := mux.NewRouter()
-	router.HandleFunc("/api/", home).Methods("get")
+
 	router.HandleFunc("/api/login", users.Login).Methods("POST")
 	router.HandleFunc("/api/signup", middlewares.TokenVerifyMiddleware(users.Signup)).Methods("POST")
-	router.HandleFunc("/api/users/{user}", middlewares.TokenVerifyMiddleware(users.UpdateUser)).Methods("PUT")
 	router.HandleFunc("/api/users", middlewares.TokenVerifyMiddleware(users.GetUsers)).Methods("GET")
+	router.HandleFunc("/api/users/{user}", middlewares.TokenVerifyMiddleware(users.UpdateUser)).Methods("PUT")
 	router.HandleFunc("/api/clients", middlewares.TokenVerifyMiddleware(clients.GetClients)).Methods("GET")
 	router.HandleFunc("/api/clients/upload", middlewares.TokenVerifyMiddleware(clients.UploadClients)).Methods("POST")
 	router.HandleFunc("/api/specials/clients", middlewares.TokenVerifyMiddleware(specials.GetSpecialClients)).Methods("GET")
 	router.HandleFunc("/api/specials/top", middlewares.TokenVerifyMiddleware(specials.GetTopSpecials)).Methods("GET")
-	router.HandleFunc("/api/alerts", middlewares.TokenVerifyMiddleware(alerts.GetAlerts)).Methods("POST")
+	router.HandleFunc("/api/alerts", middlewares.TokenVerifyMiddleware(alerts.GetAlerts)).Methods("GET")
 
 	headersOk := handlers.AllowedHeaders([]string{"X-Requested-With", "Content-Type", "Authorization"})
 	originsOk := handlers.AllowedOrigins([]string{"*"})
-	methodsOk := handlers.AllowedMethods([]string{"GET", "HEAD", "POST", "PUT"})
+	methodsOk := handlers.AllowedMethods([]string{"GET", "HEAD", "POST"})
 
-//	sh := http.StripPrefix("/api/", http.FileServer(http.Dir("./swaggerui/")))
-//	router.PathPrefix("/api/").Handler(sh)
+	sh := http.StripPrefix("/api/", http.FileServer(http.Dir("./swaggerui/")))
+	router.PathPrefix("/api/").Handler(sh)
 
 	log.Fatal(http.ListenAndServe(":8080", handlers.CORS(originsOk, headersOk, methodsOk)(router)))
-}
-
-func home(w http.ResponseWriter, r *http.Request) {
-	w.Write([]byte("DB running at port 5432\nServer running at port 8080"))
 }
